api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retrievify-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retrievify-api
      region: phx
  template:
    metadata:
      labels:
        app: retrievify-api
        region: phx
    spec:
      nodeSelector:
        region: phx
      containers:
      - name: retrievify-api
        image: jckli/retrievify-api:latest
        ports:
        - containerPort: 8000
