api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retrievify-api-service
spec:
  selector:
    app: retrievify-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
